<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollview"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.booking.BookingActivity"
    android:background="@drawable/background_meeting"
    android:scaleType="centerCrop"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

    <!-- Tout aligner a gauche, changer le titre -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="@dimen/edit_text_margin"
            android:gravity="center"
            android:text="@string/booking_activity"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/cardview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="5dp"
            app:layout_anchorGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="395dp"
                android:layout_height="match_parent"
                android:padding="16dp">

                <EditText
                    android:id="@+id/datePicker"
                    android:layout_width="@dimen/edit_text_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/edit_text_margin"
                    android:gravity="left"
                    android:hint="@string/chose_date"
                    android:inputType="date"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintStart_toEndOf="@+id/text1"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/text1"
                    android:layout_width="@dimen/text_view_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin"
                    android:text="@string/Chose_a_date"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toBottomOf="@+id/datePicker"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/datePicker" />

                <EditText
                    android:id="@+id/hour"
                    android:layout_width="@dimen/edit_text_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/edit_text_margin"
                    android:gravity="left"
                    android:hint="@string/chose_hour"
                    android:inputType="datetime"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintStart_toEndOf="@+id/text2"
                    app:layout_constraintTop_toBottomOf="@+id/datePicker" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="@dimen/text_view_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin"
                    android:text="@string/Meeting_start"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toBottomOf="@+id/hour"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/hour" />

                <EditText
                    android:id="@+id/end_hour"
                    android:layout_width="@dimen/edit_text_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/edit_text_margin"
                    android:gravity="left"
                    android:hint="@string/chose_duration"
                    android:inputType="datetime"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintStart_toEndOf="@+id/text3"
                    app:layout_constraintTop_toBottomOf="@+id/hour" />


                <TextView
                    android:id="@+id/text3"
                    android:layout_width="@dimen/text_view_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin"
                    android:text="@string/duration_meeting"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toBottomOf="@+id/end_hour"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/end_hour" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/divider_margin"
                android:layout_marginBottom="@dimen/divider_margin"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/resum_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview" />

            <TextView
                android:id="@+id/resum_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edit_text_margin"
                android:layout_marginTop="@dimen/edit_text_margin"
                android:layout_marginEnd="@dimen/edit_text_margin"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/black_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/divider_margin"
                android:layout_marginBottom="@dimen/divider_margin"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/cardview2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resum_date" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp"
                app:layout_anchorGravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <MultiAutoCompleteTextView
                        android:id="@+id/mail_autocomplete"
                        android:layout_width="@dimen/edit_text_width_email"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="@dimen/edit_text_margin"
                        android:fadeScrollbars="false"
                        android:gravity="left"
                        android:hint="@string/chose_mail"
                        android:includeFontPadding="false"
                        android:isScrollContainer="false"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintStart_toEndOf="@+id/text4"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="@dimen/text_view_width_email"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/edit_text_margin"
                        android:text="@string/mail_participant"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintBottom_toBottomOf="@+id/mail_autocomplete"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/mail_autocomplete" />


                    <EditText
                        android:id="@+id/subject"
                        android:layout_width="@dimen/edit_text_width"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="@dimen/edit_text_margin"
                        android:gravity="left"
                        android:hint="@string/type_subject"
                        android:inputType="text"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintStart_toEndOf="@+id/text5"
                        app:layout_constraintTop_toBottomOf="@+id/mail_autocomplete" />
                    <TextView
                        android:id="@+id/text5"
                        android:layout_width="@dimen/text_view_width"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/edit_text_margin"
                        android:text="@string/subject"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintBottom_toBottomOf="@+id/subject"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/subject" />


                    <Spinner
                        android:id="@+id/room_spinner"
                        android:layout_width="@dimen/edit_text_width"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="@dimen/edit_text_margin"
                        android:gravity="left"
                        android:text="@string/chose_place"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintStart_toEndOf="@+id/text6"
                        app:layout_constraintTop_toBottomOf="@+id/subject"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/text6"
                        android:layout_width="@dimen/text_view_width"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/edit_text_margin"
                        android:text="@string/chose_the_room"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintBottom_toBottomOf="@+id/room_spinner"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/room_spinner"
                        />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview2"
                android:text="@string/book_meeting" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>